--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ theme = "min_night"
 disqusShortname = ""
 googleAnalytics = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "public/"]
+newContentEditor = "vim"
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
